--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>This is a change</h1>
+    <h2> This is also a change</h2>
 </body>
 </html>
