--- a/signup.html
+++ b/signup.html
@@ -9,50 +9,26 @@
   <body>
     <div class="login">
       <div class="image">
-        <img id="car" src="car.jpg" />
+        <img id="car" src="image/car.jpg" />
       </div>
       <div class="container">
-        <img id="logo" src="logo.png" />
+        <img id="logo" src="image/logo.png" />
         <h1>Welcome aboard! Unlock your journey with us</h1>
         <form class="signup-form">
           <div class="form-group">
-            <!-- <label for="name">Name</label><br> -->
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Enter your name"
-              required
+            <input type="text" id="name" name="name" placeholder="Enter your name" required
             />
           </div>
           <div class="form-group">
-            <!-- <label for="email">Email</label><br> -->
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Enter your email"
-              required
+            <input type="email" id="email" name="email" placeholder="Enter your email"  required
             />
           </div>
           <div class="form-group">
-            <!-- <label for="password">Password</label><br> -->
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="Enter your password"
-              required
+            <input type="password"  id="password" name="password" placeholder="Enter your password" required
             />
           </div>
           <div class="form-group">
-            <!-- <label for="repeatpwd">Repeat Password</label> -->
-            <input
-              type="text"
-              id="phone"
-              name="number"
-              placeholder="Enter your phone number"
-              required
+            <input type="text" id="phone" name="number" placeholder="Enter your phone number" required
             />
           </div>
           <button id="signup" type="submit">Sign Up</button><br /><br />
